Kubernetes/Ingress/Course/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: ingress-course-service
  labels: 
    app: ingress-course-app
spec:
  type: ClusterIP
  selector:
    app: ingress-course-app
  ports:
    - port: 80
      targetPort: 80
