Kubernetes/Ingress/Course/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /course
        pathType: Prefix
        backend:
          service:
            name: ingress-course-service
            port:
              number: 80
